Add markers to report
* Update Bootstrap from version 1 to version 3
* Use SASS
* Separate tabs in report for markers